[tool.poetry]
name = "roamingmantis"
version = "0.1.0"
description = ""
authors = ["Manabu Niseki <manabu.niseki@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.16.1"
loguru = "^0.5.3"
pycrypto = "^2.6.1"
requests-html = "^0.10.0"
typer = "^0.3.2"
androguard = "^3.3.5"
aiometer = "^0.2.1"

[tool.poetry.dev-dependencies]
autoflake = "^1.3.1"
autopep8 = "^1.5.1"
black = "^19.10b0"
coveralls = "^2.0.0"
flake8 = "^3.7.9"
isort = "^4.3.21"
mypy = "^0.770"
pre-commit = "^2.2.0"
pytest = "^5.4.1"
pyupgrade = "^2.6.2"
seed-isort-config = "^2.2.0"

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
known_third_party = ["Crypto", "aiometer", "androguard", "httpx", "loguru", "requests_html", "typer"]
line_length = 88
multi_line_output = 3
use_parentheses= true

[tool.poetry.scripts]
fakespy = "roamingmantis.fakespy:app"
moqhao = "roamingmantis.moqhao:app"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
