[tool.poetry]
name = "roamingmantis"
version = "0.1.0"
description = ""
authors = ["Manabu Niseki <manabu.niseki@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.19.0"
loguru = "^0.5.3"
pycrypto = "^2.6.1"
requests-html = "^0.10.0"
typer = "^0.4.0"
androguard = "^3.3.5"
aiometer = "^0.3.0"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
autopep8 = "^1.5.7"
black = "^21.9b0"
coveralls = "^2.0.0"
flake8 = "^3.9.2"
isort = "^5.9.3"
mypy = "^0.910"
pre-commit = "^2.15.0"
pytest = "^6.2.5"
pyupgrade = "^2.29.0"

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
known_third_party = ["Crypto", "aiometer", "androguard", "httpx", "loguru", "requests_html", "typer"]
line_length = 88
multi_line_output = 3
use_parentheses= true

[tool.poetry.scripts]
fakespy = "roamingmantis.fakespy:app"
moqhao = "roamingmantis.moqhao:app"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
